# TestRenesasActions

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  crc.bat  crc.sh  project.yml
.github/workflows/: ci_actions.yml
Core/: CMakeLists.txt  core.c  core.h
Platform/RA6T2/: .secure_azone  .secure_rzone  .secure_xml  CMakeLists.txt  Config.cmake  README.md  bsp_linker_info.h  buildinfo.json  configuration.xml  fsp_app.ld  fsp_gen.ld  memory_regions.ld  memory_regions_app.ld
Platform/RA6T2/cmake/: GeneratedCfg.cmake
Platform/RA6T2/ra/fsp/src/bsp/cmsis/Device/RENESAS/Include/: R7FA6T2BD.h
Platform/RA6T2/ra/fsp/src/bsp/mcu/ra6t2/: bsp_elc.h  bsp_feature.h  bsp_mcu_info.h  bsp_override.h  bsp_peripheral.h  r_adc_device_types.h
Platform/RA6T2/ra_cfg/fsp_cfg/bsp/: bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_mcu_ofs_cfg.h  bsp_pin_cfg.h
Platform/RA6T2/ra_gen/: bsp_clock_cfg.h  pin_data.c
Platform/RA6T2/script/: fsp.ld
Platform/RA6T2/src/: hal_entry.c  ra6t2.c
Test/: test_dummy.c
cmake/: arm-none-eabi.cmake  gen_git_sha.cmake  ra6t2_project_include.cmake
